modules/vpc/subnets.tf
############################################
# Public Subnets
############################################

resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidrs)

  vpc_id                  = aws_vpc.this.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = merge(
    local.common_tags,
    {
      Name                     = "${var.project_name}-${var.environment}-public-${count.index + 1}"
      Type                     = "Public"
      "kubernetes.io/role/elb" = "1"
    }
  )
}

############################################
# Private Subnets
############################################

resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidrs)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = merge(
    local.common_tags,
    {
      Name                              = "${var.project_name}-${var.environment}-private-${count.index + 1}"
      Type                              = "Private"
      "kubernetes.io/role/internal-elb" = "1"
    }
  )
}
